--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,13 +14,14 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^2.0.0
-
+  flutter_launcher_icons: ^0.13.1
 
 flutter:
 
@@ -43,3 +44,10 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/image_logo.png"
+  min_sdk_android: 21
