--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,12 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   get: ^4.6.6
+  flutter_screenutil: ^5.9.0
+  shared_preferences: ^2.2.2
+  flutter_animation_progress_bar: ^2.3.1
+  flutter_animate: ^4.3.0
+
+
 
 dev_dependencies:
   flutter_test:
