--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,20 +36,23 @@ flutter:
   assets:
     - assets/
 
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
+  fonts:
+    - family: Tajawal
+      fonts:
+        - asset: fonts/Tajawal-ExtraLight.ttf
+          weight: 300
+        - asset: fonts/Tajawal-Light.ttf
+          weight: 400
+        - asset: fonts/Tajawal-Regular.ttf
+          weight: 500
+        - asset: fonts/Tajawal-Medium.ttf
+          weight: 600
+        - asset: fonts/Tajawal-Bold.ttf
+          weight: 700
+        - asset: fonts/Tajawal-ExtraBold.ttf
+          weight: 800
+        - asset: fonts/Tajawal-Black.ttf
+          weight: 900
 
 
 flutter_launcher_icons:
